# evnx-server

./: .env.example  .gitignore  Cargo.toml  README.md  api-tests.http  deploy.yml
.sqlx/: query-182ef88f29976046755a34c654990e3352e843a4d9ee3ae4627d061d18c806d5.json  query-2bc5f588863ed4ea9c786e5fc23af0119fba4472ab619a571a7ac9c0042854ca.json  query-34e2a80758e0e1f4fc029dd3ff75549f4ebdd9ffbd7cdae4783e4b174a5c5eee.json  query-37966ee80e8802329d9a933ff0204c6f5d24c01c9f590a8b93cf53983c865f76.json  query-3cf0f98a0725069deeaf52c648235e4f302a6929d1a194a423195e8094dd69fc.json  query-496cdd85f4171013e28c18d7bafb5b24c214ef07590aa4639d4ee84e168312a9.json  query-4cdb22ae43f27983ec758083aa99eaaadb3ea303fe066d9105c61f73ee5e09fd.json  query-4f45c9504e810f06aa1bce474ce4df44829621ac5457fc2a491a01dd2e155513.json  query-4fcceb64f3b688be1e55ef0268ecd7fda789fb443ac6575036b898f0f26ee7e9.json  query-55fb20785607f9d4ce6f919da82082df078e6466cef5bc85da84bacf78b57227.json  query-5b5634a6dca5e90dc01deee827112b6eb031c9325a2cc44aadd7e511fdbddbec.json  query-5c3d16c9877644af2cbd22cdc7322c6bf9c3f2a23c41c496de96243c9035782e.json  query-6b3f9495de279b3b2ecedb2719eb338435b0d1c61f92e84beaca3592b85a7d59.json  query-6e08c68b68d4b0dc9ae82740e3a8b197a736815d77e05ad0edea56cee15c12b2.json  query-6e572d41927940f6daa3c70b9e26a78e14786a21b0d9f8f4c52afd3a019db944.json  query-738cf3091d9033bf6395e2cea113ead13e92dd617548b17ef8ed54b78be55b3b.json  query-8e568c9b5a2d87c8a22ecd422bba3e8c33eb9e0b5daaf32a1e03ffbaf804d823.json  query-93eb9e2aa9986b2e3b1b3bf68fc9194a74ebbffb35261a3b0aabb0ed2b338934.json  query-9df551e30734f32d7ed1809b42fafa1f5a3e4ee214fd17676df11d97a3b13e1e.json  query-add6ac8161fec807fa2bb262e9307685c1900a1286255cdba09d53acf5cf2d10.json  query-b0b4b35253305d7dc47a9559ab2d8e8f0d32305fdd90a8f3eaee998275f36ff1.json  query-b1e279b883429c34e0e11f646f8da1411f045287e323f70044dd0b615975e0f8.json  query-b25c22955d7dd5087f41ddf2be3662e0fc5d78d8361248df83996f12fd239c7f.json  query-b37713f506b641496594ae79e022c8ced6b87d42f0122394f453951262897918.json  query-c3be8735ad4e17674f6379b0785ec8a97d48efd2a44154aed0577ec0a5712447.json  query-c43ce6973d94cc9160b73ae85d70667eece9fe49168db48b3ae7302e62fd87c6.json  query-d5a4a1676e5ab4fdf55cfd2d214590767709d8d62580695f287ebf3ce74e6c01.json  query-d97db4b2555593477f1205ffe101ba9ac1c139552d2b3ee91bf887ff701dc4e6.json  query-dac63fce4feca897d6e7649bc90adfa43ed87c1662cc176be3621b2b58ebeaa1.json  query-dc5cdbfaa4d8652e60a3f5e4b1f8d1d86b293ec72861a35dafe4bfef32384d63.json  query-dec4e3a8b12c7d2f335a3517bb65f78b71f5aa252951222ad1503072149186ce.json  query-e6b72b7c1e8f7de53e5e225c6444228107b48e912320088794fcc175b5b94f38.json
bruno/: bruno.json
bruno/environments/: local.bru  production.bru
bruno/requests/auth/: logout.bru  logout_then_use_token.bru  me.bru  refresh.bru  register.bru  register_bad_email.bru  register_duplicate_email.bru  srp_init.bru  srp_init_unknown_email.bru  srp_verify.bru
bruno/requests/health/: health_check.bru
bruno/requests/members/: add_member.bru
bruno/requests/tokens/: create_token.bru  list_tokens.bru  revoke_token.bru  use_api_token.bru
bruno/requests/users/: 01_get_public_key.bru
bruno/requests/vaults/: create_vault.bru  delete_vault.bru  get_my_key.bru  list_vaults.bru  list_vaults_no_auth.bru
bruno/requests/versions/: 01_push_version.bru  02_get_latest_version.bru  03_list_versions.bru
docker/: Dockerfile.server  docker-compose.prod.yml  docker-compose.yml
docker/localstack/: init-s3.sh
migrations/: 001_initial.sql  002_add_x25519_pubkey.sql
src/: config.rs  errors.rs  main.rs  state.rs
src/db/: members.rs  mod.rs  tokens.rs  users.rs  vaults.rs  versions.rs
src/middleware/: auth.rs  mod.rs  security_headers.rs
src/routes/: auth.rs  members.rs  mod.rs  tokens.rs  users.rs  vaults.rs  versions.rs
src/services/: audit.rs  cache.rs  email.rs  jwt.rs  mod.rs  storage.rs
tests/: integration_test.rs
