[package]
name = "evnx-server"
version = "0.1.0"
edition = "2021"
description = "evnx cloud sync backend — stores encrypted vault blobs, authenticates via SRP-6a"

# ─── Web Framework ─────────────────────────────────────────────────────────────
[dependencies]
axum       = { version = "0.7", features = ["macros"] }
tokio      = { version = "1",   features = ["full"] }
tower      = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors", "request-id", "compression-gzip"] }

# ─── Database (Postgres) ────────────────────────────────────────────────────────
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "migrate",
    "uuid",
    "chrono",
    "json",
] }
uuid    = { version = "1",   features = ["v4", "serde"] }
chrono  = { version = "0.4", features = ["serde"] }

# ─── Serialization ─────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ─── Configuration ─────────────────────────────────────────────────────────────
dotenvy = "0.15"   # Loads .env file on startup

# ─── Error handling ─────────────────────────────────────────────────────────────
thiserror = "1"
anyhow    = "1"

# ─── Logging / Tracing ─────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
# Testing HTTP endpoints without running a real server
axum-test = "14"